--- a/styles/contact.css
+++ b/styles/contact.css
@@ -116,7 +116,11 @@ body {
 }
 
 .adress-container h2 {
-  margin: 15px 0 30px 20px;
+  margin: 25px 0 30px 20px;
+  font-size: 1rem;
+  text-align: left;
+  color: var(--main-text-color);
+  padding: 0;
 }
 
 .adress-item-container {
@@ -366,6 +370,27 @@ footer {
   .modal {
     width: 60%;
   }
+}
+
+@media screen and (max-width: 850px) {
+  .adress-container h2 {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .adress-container h2 {
+    color: var(--subtitle3-color);
+  }
+
+  .adress-item p, .adress-item a  {
+    font-size:1.2rem
+  }
+
+  .adress-item p:hover, .adress-item a:hover {
+    color: var(--subtitle3-color);
+  }
+  .
 }
 
 @media screen and (max-width: 680px) {
