--- a/styles/contact.css
+++ b/styles/contact.css
@@ -103,11 +103,12 @@ body {
 }
 
 .adress-container h2 {
-  margin: 25px 0 30px 20px;
+  margin: 50px 0 30px 0;
   font-size: 1.3rem;
   text-align: left;
   color: var(--main-text-color);
   padding: 0;
+  text-align: center;
 }
 
 .adress-item-container {
@@ -117,6 +118,7 @@ body {
   align-items: center;
   width: 100%;
   height: 70%;
+  margin-top: 8vh;
 }
 
 .adress-item {
@@ -249,6 +251,8 @@ footer {
 }
 
 /* Responsive */
+
+
 @media screen and (max-width: 1100px) and (min-width: 780px) {
   .adress-item-container {
     flex-flow: column nowrap;
@@ -357,9 +361,6 @@ footer {
   .modal {
     width: 60%;
   }
-  .adress-container h2 {
-    text-align: center;
-  }
 }
 
 
@@ -390,7 +391,12 @@ footer {
 
   .adress-container h2 {
     color: var(--subtitle3-color);
-    text-align: center;
     margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .adress-container a, .adress-container p {
+    font-size: 1.5rem;
   }
 }
