--- a/styles/style.css
+++ b/styles/style.css
@@ -182,6 +182,7 @@ color: #fff;
 .sub-title {
   font-size: 4vw;
   font-weight: 500;
+  text-transform: none;
   color: var(--subtitle-color);
   font-family: "Raleway", sans-serif;
 }
