--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -130,6 +130,8 @@ footer {
     display: none !important;
   }
 
+}
+
 
 
 
@@ -171,10 +173,4 @@ footer {
     margin-bottom: 30px;
   }
 
-
-
 }
-
-
-
-
