--- a/styles/event.css
+++ b/styles/event.css
@@ -40,6 +40,7 @@
         width: 100%;
         font-weight: normal;
         margin: 0px auto;
+        text-align: center;
   }
   
       .style {
