--- a/styles/menu.css
+++ b/styles/menu.css
@@ -31,6 +31,9 @@
     .banner-title span{
         font-size : 16px;
     }
+h1 {
+        font-size: 40px;
+}
 .menu {
     width: 100%;
     min-width: 360px;
